hard-gists/732873/run.log
=== Docker Run Log for 732873 ===
Started at: Mi 29. Okt 17:05:21 CET 2025

[2025-10-29 17:05:21] START: Running container for 732873
[2025-10-29 17:05:22] SUCCESS: Container 9797b6271d15ebe098315746660b04f6d23c17bd4245b745091b515d5babc709 started for 732873
=== Container logs for 732873 ===
  File "/snippet.py", line 23
    print "\nWARNING: The following watched files have changed!"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 732873 ===
[2025-10-29 17:05:24] INFO: Container 9797b6271d15ebe098315746660b04f6d23c17bd4245b745091b515d5babc709 has stopped
